  Bug#16315 XML: extractvalue() handles self badly xml.result, xml.test:   Adding test case. item_xmlfunc.cc:   Adding a special function to handle "self" axis.   Previously "child" and "self" were handled the same.